# typenum

./: README.md  mypy.ini  pyproject.toml
docs/: compatibility.md  limitations.md
typenum/: __init__.py  core.py
typenum/pydantic/: __init__.py  core.py  serialization.py
typenum/pydantic/serialization/: __init__.py  adjacently.py  externally.py  internally.py  tagged.py
typenum/pydantic/variance/: __init__.py  discriminant.py  nested.py  separated.py
